implement more auth endpoints
