# user-service/api/render.go
@@ -25,3 +25,7 @@ func (c LoginRequest) Bind(r *http.Request) error {
 func (c AuthResponse) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
+
+func (c RefreshTokenRequest) Bind(r *http.Request) error {
+	return nil
+}
